loopfor.LoopCourseForest.scala.error
Erreur de compilation :
LoopCourseForest:19: error: identifier expected but 'for' found.
  for (k <- 1 to 4){
  ^