loopfor.LoopCourseForest.scala.code


for (i<- 1 to 28){
  
  
  	for ( k <- 1 to 4){avance();}
      
    gauche()
    avance();
    avance();
    droite();
  	for (k <- 1 to 4){
      avance();
    }
  	droite();
  avance();
  avance();
  gauche():
  for (k <- 1 to 4){
      avance();
    }
  gauche();
    
  
  
  
}